---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: ????
  Changes:
    - Fixed readme
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2025-06-01
  Fixes:
    - Fixed switching to ghost item on character controller
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-05-25
  Info:
    - Initial release.
  Locale:
    - English is available.
  License:
    - Using MIT License. Document included.